[gd_scene load_steps=10 format=3 uid="uid://bbtvaphcjmt2x"]

[ext_resource type="Script" path="res://element/element_component/element_component.gd" id="1_2e0ql"]
[ext_resource type="Texture2D" uid="uid://ob1kv08o0ocy" path="res://assets/texture/element.aseprite" id="1_bdr2h"]
[ext_resource type="Texture2D" uid="uid://cigg0i0him0qk" path="res://element/element_component/transparent_surface.tres" id="2_5rnsa"]
[ext_resource type="PackedScene" uid="uid://ctban177deixj" path="res://element/element_component/electricity.tscn" id="4_rg0i7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_171sx"]
atlas = ExtResource("1_bdr2h")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhlhr"]
atlas = ExtResource("1_bdr2h")
region = Rect2(48, 80, 16, 16)

[sub_resource type="Animation" id="Animation_wjtje"]
resource_name = "Disdetachabled"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_v7nt8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nv5s7"]
_data = {
"Disdetachabled": SubResource("Animation_wjtje"),
"RESET": SubResource("Animation_v7nt8")
}

[node name="ElementComponent" type="Control"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 3
anchors_preset = 0
pivot_offset = Vector2(16, 16)
script = ExtResource("1_2e0ql")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(16, 16)

[node name="Base" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_171sx")

[node name="Core" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.945098, 0.909804, 1)

[node name="Electricity1" parent="Control" instance=ExtResource("4_rg0i7")]
position = Vector2(16, 10)
rotation = -1.5708

[node name="Electricity2" parent="Control" instance=ExtResource("4_rg0i7")]
position = Vector2(22, 16)

[node name="Electricity3" parent="Control" instance=ExtResource("4_rg0i7")]
position = Vector2(16, 22)
rotation = 1.5708

[node name="Electricity4" parent="Control" instance=ExtResource("4_rg0i7")]
position = Vector2(10, 16)
rotation = 3.14159

[node name="Surface" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5rnsa")

[node name="Disdetachabled" type="TextureRect" parent="Control"]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(16, 16)
texture = SubResource("AtlasTexture_lhlhr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Disdetachabled"]
libraries = {
"": SubResource("AnimationLibrary_nv5s7")
}

[node name="Button" type="Button" parent="Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
button_mask = 2

[connection signal="gui_input" from="Control/Button" to="." method="_on_button_gui_input"]
